# hostboot

./: .gitignore  .gitmodules  LICENSE_PROLOG  MAINTAINERS  README.md  config.mk  env.bash  env.csh  example_customrc  hb  host_pdr_handler.cpp  host_pdr_handler.hpp  kernel.c  kernel.ld  makefile  meson.build  procedure.rules.mk  qemu_control  setup.py  start.S  utils.cpp  utils.hpp
img/: .gitignore
src/subtree/openbmc/pldm/: .clang-format  .eslintignore  .gitignore  .linter-ignore  MAINTAINERS  OWNERS  README.md  dbus_impl_pdr.cpp  meson.build  meson.options  meson_options.txt  pldmd.cpp
src/subtree/openbmc/pldm/common/: bios_utils.hpp  flight_recorder.hpp  types.hpp  utils.cpp  utils.hpp
src/subtree/openbmc/pldm/common/test/: meson.build  mocked_utils.hpp  pldm_utils_test.cpp
src/subtree/openbmc/pldm/configurations/: fru_master.json  meson.build
src/subtree/openbmc/pldm/configurations/events/: stateSensorPdrs.json
src/subtree/openbmc/pldm/configurations/host/: dbus_to_host_effecter.json  host_frus.json
src/subtree/openbmc/pldm/configurations/pdr/: 11.json  4.json
src/subtree/openbmc/pldm/fw-update/: activation.hpp  device_updater.cpp  device_updater.hpp  inventory_manager.cpp  inventory_manager.hpp  manager.hpp  package_parser.cpp  package_parser.hpp  update_manager.cpp  update_manager.hpp  watch.cpp  watch.hpp
src/subtree/openbmc/pldm/fw-update/test/: device_updater_test.cpp  inventory_manager_test.cpp  meson.build  package_parser_test.cpp  test_pkg
src/subtree/openbmc/pldm/host-bmc/: dbus_to_event_handler.cpp  dbus_to_event_handler.hpp  dbus_to_host_effecters.cpp  dbus_to_host_effecters.hpp  host_condition.cpp  host_condition.hpp  host_pdr_handler.cpp  host_pdr_handler.hpp
src/subtree/openbmc/pldm/host-bmc/test/: dbus_to_host_effecter_test.cpp  meson.build
src/subtree/openbmc/pldm/libpldm/: .clang-tidy  CHANGELOG.md  OWNERS  README.md  base.c  base.h  bios.c  bios.h  bios_table.c  bios_table.h  entity.h  firmware_update.c  firmware_update.h  fru.c  fru.h  meson.build  meson_options.txt  pdr.c  pdr.h  platform.c  platform.h  pldm_types.h  state_set.h  utils.h
src/subtree/openbmc/pldm/libpldm/abi/aarch64/: gcc.dump
src/subtree/openbmc/pldm/libpldm/instance-db/: default
src/subtree/openbmc/pldm/libpldm/src/: array.h  base.c  bios.c  bios_table.c  config.h  firmware_update.c  fru.c  mctp-defines.h  meson.build  msgbuf.h  pdr.c  platform.c  utils.c
src/subtree/openbmc/pldm/libpldm/tests/: bios_table_iter.c  instance-id.cpp  libpldm_base_test.cpp  libpldm_bios_table_test.cpp  libpldm_bios_test.cpp  libpldm_firmware_update_test.cpp  libpldm_fru_test.cpp  libpldm_pdr_test.cpp  libpldm_platform_test.cpp  libpldm_utils_test.cpp  meson.build  msgbuf.cpp  msgbuf_generic.c  transport.cpp
src/subtree/openbmc/pldm/libpldmresponder/: base.cpp  base.hpp  bios.cpp  bios.hpp  bios_attribute.cpp  bios_attribute.hpp  bios_config.cpp  bios_config.hpp  bios_enum_attribute.cpp  bios_enum_attribute.hpp  bios_integer_attribute.cpp  bios_integer_attribute.hpp  bios_string_attribute.cpp  bios_string_attribute.hpp  bios_table.cpp  bios_table.hpp  event_parser.cpp  event_parser.hpp  fru.cpp  fru.hpp  fru_parser.cpp  fru_parser.hpp  meson.build  oem_handler.hpp  pdr.cpp  pdr.hpp  pdr_numeric_effecter.hpp  pdr_state_effecter.hpp  pdr_state_sensor.hpp  pdr_utils.cpp  pdr_utils.hpp  platform.cpp  platform.hpp  platform_numeric_effecter.hpp  platform_state_effecter.hpp  platform_state_sensor.hpp
src/subtree/openbmc/pldm/libpldmresponder/test/: libpldmresponder_base_test.cpp  libpldmresponder_bios_attribute_test.cpp  libpldmresponder_bios_config_test.cpp  libpldmresponder_bios_enum_attribute_test.cpp  libpldmresponder_bios_integer_attribute_test.cpp  libpldmresponder_bios_string_attribute_test.cpp  libpldmresponder_bios_test.cpp  libpldmresponder_fru_test.cpp  libpldmresponder_pdr_effecter_test.cpp  libpldmresponder_pdr_sensor_test.cpp  libpldmresponder_platform_test.cpp  meson.build  mocked_bios.hpp
src/subtree/openbmc/pldm/pldmd/: dbus_impl_pdr.cpp  dbus_impl_pdr.hpp  dbus_impl_requester.hpp  handler.hpp  instance_id.hpp  invoker.hpp  pldmd.cpp  pldmd.service
src/subtree/openbmc/pldm/pldmd/service_files/: pldmd.service
src/subtree/openbmc/pldm/pldmd/verbosity/: verbosity
src/subtree/openbmc/pldm/pldmtool/: README.md  meson.build  pldm_base_cmd.cpp  pldm_bios_cmd.cpp  pldm_cmd_helper.cpp  pldm_cmd_helper.hpp  pldm_fru_cmd.cpp  pldm_fw_update_cmd.cpp  pldm_fw_update_cmd.hpp  pldm_platform_cmd.cpp  pldm_platform_cmd.hpp  pldmtool.cpp
src/subtree/openbmc/pldm/requester/: README.md  handler.hpp  mctp_endpoint_discovery.cpp  mctp_endpoint_discovery.hpp  request.hpp
src/subtree/openbmc/pldm/requester/test/: handler_test.cpp  meson.build  mock_request.hpp  request_test.cpp
src/subtree/openbmc/pldm/softoff/: main.cpp  meson.build  softoff.cpp  softoff.hpp
src/subtree/openbmc/pldm/softoff/services/: pldmSoftPowerOff.service
src/subtree/openbmc/pldm/subprojects/: CLI11.wrap  libpldm.wrap  nlohmann-json.wrap  sdeventplus.wrap
src/subtree/openbmc/pldm/test/: libpldmresponder_bios_attribute_test.cpp  libpldmresponder_bios_config_test.cpp  libpldmresponder_bios_enum_attribute_test.cpp  libpldmresponder_bios_integer_attribute_test.cpp  libpldmresponder_bios_string_attribute_test.cpp  libpldmresponder_fru_test.cpp  libpldmresponder_pdr_effecter_test.cpp  libpldmresponder_pdr_sensor_test.cpp  libpldmresponder_platform_test.cpp  meson.build  pldmd_instanceid_test.cpp  pldmd_registration_test.cpp  test_instance_id.hpp
src/subtree/openbmc/pldm/test/bios_jsons/: enum_attrs.json  integer_attrs.json  string_attrs.json
src/subtree/openbmc/pldm/tool/: pldm_base_cmd.cpp  pldm_cmd_helper.hpp  pldm_fru_cmd.cpp  pldmtool.cpp
src/subtree/openbmc/pldm/tools/fw-update/: README.md  metadata-example.json  pldm_fwup_pkg_creator.py
src/subtree/openbmc/pldm/tools/visualize-pdr/: README.md  pldm_visualise_pdrs.py  requirements.txt
src/subtree/openbmc/pldm/utilities/: meson.build
src/subtree/openbmc/pldm/utilities/requester/: set_state_effecter.cpp  set_state_effecter_async.cpp
(+10338 files in other folders)
